--- a/index.html
+++ b/index.html
@@ -1,19 +1,38 @@
 <html lang="en">
-<head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>FKbrány.sk</title>
-<link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
-<link rel="manifest" href="/img/favicon/site.webmanifest">
-<link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
-<meta name="msapplication-TileColor" content="#ffffff">
-<meta name="theme-color" content="#ffffff">
-<link rel="stylesheet" href="/src/assets/main.scss">
-<body>
-<div id="app"></div>
-<script type="module" src="/src/main.ts"></script>
-<script src="https://kit.fontawesome.com/fb78c8d4cd.js" crossorigin="anonymous"></script>
-</body>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>FKbrány.sk</title>
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="/img/favicon/site.webmanifest">
+    <link rel="mask-icon" href="/img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="theme-color" content="#ffffff">
+    <meta name="description" content="Výroba krídlových a posuvných brán na mieru">
+    <meta name="keywords" content="FKbrány.sk, Brány, Krídlové brány, Posuvné brány, Na mieru">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="FKbrány.sk - Výroba krídlových a posuvných brán na mieru">
+    <meta property="og:description" content="Vyrábame ploty, brány a bránky na zákazku podľa konkrétnych požiadaviek zákazníka. Všetky brány, plotové dielce či kompletné systémy vyrábame na mieru.">
+    <meta property="og:url" content="https://fkbrany.sk">
+    <meta name="author" content="FKbrány.sk">
+    <meta name="copyright" content="FKbrány.sk">
+    <meta name="application-name" content="FKbrány.sk - Výroba krídlových a posuvných brán na mieru">
+    <meta property="og:url" content="https://fkbrany.sk">
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="sk_SK">
+    <meta property="og:site_name" content="FKbrány.sk Portfolio">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://fkbrany.sk">
+    <meta name="twitter:title" content="FKbrány.sk - Výroba krídlových a posuvných brán na mieru">
+    <meta name="twitter:description" content="Vyrábame ploty, brány a bránky na zákazku podľa konkrétnych požiadaviek zákazníka. Všetky brány, plotové dielce či kompletné systémy vyrábame na mieru.">
+    <link rel="canonical" href="https://fkbrany.sk" />
+    <link rel="stylesheet" href="/src/assets/main.scss">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script type="module" src="/src/main.ts"></script>
+    <script src="https://kit.fontawesome.com/fb78c8d4cd.js" crossorigin="anonymous"></script>
+  </body>
 </html>
